# BitrotBruteforce

./: .gitignore  Bruteforce.sln  CLAUDE.md  CROSS_COMPILATION.md  CUDA_CROSS_COMPILATION.md  CompileCudaToPtx.ps1  CrossCompileLinuxCuda.ps1  Directory.Build.props  Dockerfile  LINUX_BUILD_REQUIREMENTS.md  README.md  ROCM_SUPPORT.md  TESTING_WINDOWS.md  WINDOWS_BUILD_REQUIREMENTS.md  WINDOWS_LINUX_CUDA_BUILD.md  WINDOWS_LINUX_PUBLISH.md  build-cuda-cross-compile.ps1  build-cuda-linux.sh  build-linux-on-linux.sh  build-rocm.bat  build-rocm.sh  publish-linux.sh  setup-windows.ps1
.github/workflows/: build-and-test.yml  build.yml  ci-cd.yml  cuda-cross-compile.yml  linux-cuda-native-build.yml  main.yml  test-windows-linux-publish.yml
Bruteforce/: Bruteforce-CI.csproj  Bruteforce.Linux.targets  Bruteforce.csproj  BruteforceCuda.cs  BruteforceGpu.cs  CudaPtxLoader.cs  GpuDetection.cs  Program.cs  buildCuda.ps1
CudaAlignedBitrotFinder/: CMakeLists.txt  CudaAlignedBitrotFinder.Linux.vcxproj  CudaAlignedBitrotFinder.vcxproj  kernel.cu
CudaUnalignedBitrotFinder/: CMakeLists.txt  CudaUnalignedBitrotFinder.Linux.vcxproj  CudaUnalignedBitrotFinder.vcxproj  kernel.cu
RocmAlignedBitrotFinder/: Makefile  kernel.cpp  sha1.cpp  sha1.hpp
RocmUnalignedBitrotFinder/: Makefile  kernel.cpp  sha1.cpp  sha1.hpp
